# ChangeLog for www-apache/mod_fcgid
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_fcgid/ChangeLog,v 1.60 2014/01/17 20:46:57 ago Exp $

  17 Jan 2014; Agostino Sarubbo <ago@gentoo.org> mod_fcgid-2.3.9.ebuild:
  Stable for ppc, wrt bug #487314

  16 Jan 2014; Agostino Sarubbo <ago@gentoo.org> mod_fcgid-2.3.9.ebuild:
  Stable for x86, wrt bug #487314

  16 Jan 2014; Agostino Sarubbo <ago@gentoo.org> mod_fcgid-2.3.9.ebuild:
  Stable for amd64, wrt bug #487314

*mod_fcgid-2.3.9 (14 Jan 2014)

  14 Jan 2014; Hanno Boeck <hanno@gentoo.org> +mod_fcgid-2.3.9.ebuild:
  Bump, fixes CVE-2013-4365.

  23 Dec 2013; Pacho Ramos <pacho@gentoo.org> -mod_fcgid-2.3.5.ebuild,
  -mod_fcgid-2.3.6.ebuild, metadata.xml:
  Cleanup due bug #66351

  09 Jul 2013; Jeroen Roovers <jer@gentoo.org> mod_fcgid-2.3.7.ebuild:
  Marked ~hppa (bug #475912).

  27 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop apache herd as discussed in http://www.gossamer-
  threads.com/lists/gentoo/dev/262834

  08 Jun 2012; Brent Baude <ranger@gentoo.org> mod_fcgid-2.3.7.ebuild:
  Marking mod_fcgid-2.3.7 ppc for bug 409373

  21 May 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> mod_fcgid-2.3.7.ebuild:
  x86 stable wrt bug #409373

  14 May 2012; Agostino Sarubbo <ago@gentoo.org> mod_fcgid-2.3.7.ebuild:
  Stable for amd64, wrt bug #409373

*mod_fcgid-2.3.7 (13 May 2012)

  13 May 2012; Lance Albertson <ramereth@gentoo.org> +mod_fcgid-2.3.7.ebuild:
  Version bump, also fixes #410927

  Changed to need_apache2 since it supports both 2.2 and 2.4 via upstream.

  11 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org>
  mod_fcgid-2.3.6.ebuild:
  ppc stable wrt #344685

  21 Nov 2010; Markus Meier <maekke@gentoo.org> mod_fcgid-2.3.6.ebuild:
  amd64/x86 stable, bug #344685

*mod_fcgid-2.3.6 (09 Nov 2010)

  09 Nov 2010; Lance Albertson <ramereth@gentoo.org>
  +mod_fcgid-2.3.6.ebuild:
  version bump for #344685
